clean dependencies